[package]
name = "samantha"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-message", "shell-open"] }
serde = { version = "1", features = ["derive"] }
steamlocate = { git = "https://github.com/LuisMayo/steamlocate-rs.git", branch = "feat/locate-multiple" }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1"
steamworks = { git = "https://github.com/LuisMayo/steamworks-rs", branch="fix/icon-size-fix"}
base64 = "0.22.0"
image = {version = "0.25.1", features = ["png"] }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
